--- a/views/user/singleproduct.ejs
+++ b/views/user/singleproduct.ejs
@@ -61,7 +61,7 @@
 
                 </li>
                 <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
-                <% if(locals.user) { %>
+                <!-- <% if(locals.user) { %>
                   <li class="nav-item dropdown">
                     <a class="nav-link " href="/logout" id="navbarDropdown_3" role="button">
                       logout
@@ -77,7 +77,7 @@
 
                     </li>
 
-                    <% } %>
+                    <% } %> -->
 
                       <li class="nav-item dropdown">
                         <a class="nav-link " href="/profile" id="navbarDropdown_2" role="button">
@@ -90,7 +90,7 @@
               </ul>
             </div>
             <div class="hearer_icon d-flex">
-              <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+              <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
               <a href=""><i class="ti-heart"></i></a>
               <div class="dropdown ">
                 <a class="dropdown" href="/cart" id="navbarDropdown3" role="button">
@@ -108,15 +108,7 @@
         </div>
       </div>
     </div>
-    <!-- <div class="search_input" id="search_input_box">
-        <div class="container ">
-            <form class="d-flex justify-content-between search-inner">
-                <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-                <button type="submit" class="btn"></button>
-                <span class="ti-close" id="close_search" title="Close Search"></span>
-            </form>
-        </div>
-    </div> -->
+   
   </header>
   <!-- Header part end-->
 
