--- a/views/admin/Categories.ejs
+++ b/views/admin/Categories.ejs
@@ -66,7 +66,7 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/loadCoupon">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Coupon</span>
                     </a>
@@ -76,6 +76,14 @@
                     <a class="menu-link" href="/loadOffer">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
                     </a>
 
                 </li>
@@ -175,7 +183,7 @@
                                                         <td class="text-end">
                                                             <button onclick="confirmDelete('<%= Data[i]._id %>')"
                                                                 class="btn btn-primary rounded font-sm">Remove</button><br>
-                                                                <%= Data[i].Offer.name %> (<%= Data[i].Offer.percentage %>%) 
+                                                            <%= Data[i].Offer.name %> (<%= Data[i].Offer.percentage %>%)
                                                         </td>
 
 
