--- a/views/admin/Categoriesadd.ejs
+++ b/views/admin/Categoriesadd.ejs
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,7 +68,7 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Coupon</span>
                     </a>
@@ -80,6 +78,14 @@
                     <a class="menu-link" href="/loadOffer">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
                     </a>
 
                 </li>
@@ -118,37 +124,41 @@
                 </ul>
             </div>
         </header>
-        
-<link href="/css/main.css?v=1.1" rel="stylesheet" type="text/css" />
 
-<div class="col-md-3"  style="margin-top: auto; margin-left: auto; margin-bottom: auto; margin-right:auto ;">
-     <br>
-    <h3>add Categories</h3>
-    <br>
-    <br>
-    <form action="/addCategory" method="post"  onsubmit="return validateForm()">
-        <div class="mb-4">
-            <label for="product_name" class="form-label">Name</label>
-            <input type="text" placeholder="Type here" class="form-control" id="product_name" name="product_name" />
-            <span id="nameError" class="error"></span>
-        </div>
-      
-        <div class="mb-4">
-            <label class="form-label">Description</label>
-            <textarea placeholder="Type here" class="form-control" id="product_description" name="product_description"></textarea>
-            <span id="descriptionError" class="error"></span>
-        </div>
-        <div class="d-grid">
-            <button class="btn btn-primary" type="submit">Create category</button>
-        </div>
-    <% if ( messages &&  messages.message){ %>
-        <h5 style="color: brown;"><%= messages.message %></h5>
-   <% }%>
-       
+        <link href="/css/main.css?v=1.1" rel="stylesheet" type="text/css" />
 
-    </form>
+        <div class="col-md-3" style="margin-top: auto; margin-left: auto; margin-bottom: auto; margin-right:auto ;">
+            <br>
+            <h3>add Categories</h3>
+            <br>
+            <br>
+            <form action="/addCategory" method="post" onsubmit="return validateForm()">
+                <div class="mb-4">
+                    <label for="product_name" class="form-label">Name</label>
+                    <input type="text" placeholder="Type here" class="form-control" id="product_name"
+                        name="product_name" />
+                    <span id="nameError" class="error"></span>
+                </div>
 
-    
+                <div class="mb-4">
+                    <label class="form-label">Description</label>
+                    <textarea placeholder="Type here" class="form-control" id="product_description"
+                        name="product_description"></textarea>
+                    <span id="descriptionError" class="error"></span>
+                </div>
+                <div class="d-grid">
+                    <button class="btn btn-primary" type="submit">Create category</button>
+                </div>
+                <% if ( messages && messages.message){ %>
+                    <h5 style="color: brown;">
+                        <%= messages.message %>
+                    </h5>
+                    <% }%>
+
+
+            </form>
+
+
 
     </main>
     <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
@@ -232,31 +242,31 @@
     </script>
 
 
-<script>
-    function validateForm() {
-        var name = document.getElementById("product_name").value;
-        var description = document.getElementById("product_description").value;
-     
-        
-        if (name.trim() === '') {
-            document.getElementById("nameError").innerHTML = 'name cannot be empty';
-            document.getElementById("nameError").style.color = "red";
-            return false;
-        } else {
-            document.getElementById("nameError").innerHTML = '';
-            
+    <script>
+        function validateForm() {
+            var name = document.getElementById("product_name").value;
+            var description = document.getElementById("product_description").value;
+
+
+            if (name.trim() === '') {
+                document.getElementById("nameError").innerHTML = 'name cannot be empty';
+                document.getElementById("nameError").style.color = "red";
+                return false;
+            } else {
+                document.getElementById("nameError").innerHTML = '';
+
+            }
+            if (description.trim() === '') {
+                document.getElementById("descriptionError").innerHTML = 'Description cannot be empty';
+                document.getElementById("descriptionError").style.color = "red";
+                return false;
+            } else {
+                document.getElementById("descriptionError").innerHTML = '';
+
+            }
+            return true
         }
-        if (description.trim() === '') {
-            document.getElementById("descriptionError").innerHTML = 'Description cannot be empty';
-            document.getElementById("descriptionError").style.color = "red";
-            return false;
-        } else {
-            document.getElementById("descriptionError").innerHTML = '';
-           
-        }
-        return true
-    }
-</script>
+    </script>
 </body>
 
 </html>
