--- a/views/admin/Categoriesedit.ejs
+++ b/views/admin/Categoriesedit.ejs
@@ -61,6 +61,35 @@
                     </a>
 
                 </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/orderList">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Orders</span>
+                    </a>
+
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/loadcoupon">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/loadOffer">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
+                    </a>
+
+                </li>
 
                 <br />
                 <br />
