--- a/views/admin/Dashboard.ejs
+++ b/views/admin/Dashboard.ejs
@@ -64,9 +64,24 @@
     
                     </li>
                     <li class="menu-item ">
+                        <a class="menu-link" href="/loadcoupon">
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Coupon</span>
+                        </a>
+    
+                    </li>
+                    <li class="menu-item ">
                         <a class="menu-link" href="/loadOffer">
                             <i class="icon material-icons md-shopping_cart"></i>
                             <span class="text">Offers</span>
+                        </a>
+    
+                    </li>
+    
+                    <li class="menu-item ">
+                        <a class="menu-link" href="/SaleReport">
+                            <i class="icon material-icons md-shopping_cart"></i>
+                            <span class="text">Sales Report</span>
                         </a>
     
                     </li>
@@ -207,7 +222,7 @@
                                         <div class="new-member-list">
                                             <div class="d-flex align-items-center justify-content-between mb-4">
                                                 <div class="d-flex align-items-center">
-                                                    <img src="assets/imgs/people/avatar-4.png" alt="" class="avatar" />
+                                                    <img src="a/imgs/people/avatar-4.png" alt="" class="avatar" />
                                                     <div>
                                                         <h6>Patric Adams</h6>
                                                         <p class="text-muted font-xs">Sanfrancisco</p>
@@ -559,14 +574,14 @@
                 </div>
             </footer>
         </main>
-        <script src="assets/js/vendors/jquery-3.6.0.min.js"></script>
-        <script src="assets/js/vendors/bootstrap.bundle.min.js"></script>
-        <script src="assets/js/vendors/select2.min.js"></script>
-        <script src="assets/js/vendors/perfect-scrollbar.js"></script>
-        <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
-        <script src="assets/js/vendors/chart.js"></script>
+        <script src="admin/js/vendors/jquery-3.6.0.min.js"></script>
+        <script src="admin/js/vendors/bootstrap.bundle.min.js"></script>
+        <script src="admin/js/vendors/select2.min.js"></script>
+        <script src="admin/js/vendors/perfect-scrollbar.js"></script>
+        <script src="admin/js/vendors/jquery.fullscreen.min.js"></script>
+        <script src="admin/js/vendors/chart.js"></script>
         <!-- Main Script -->
-        <script src="assets/js/main.js?v=1.1" type="text/javascript"></script>
-        <script src="assets/js/custom-chart.js" type="text/javascript"></script>
+        <script src="admin/js/main.js?v=1.1" type="text/javascript"></script>
+        <script src="admin/js/custom-chart.js" type="text/javascript"></script>
     </body>
 </html>
