--- a/views/admin/EditProduct.ejs
+++ b/views/admin/EditProduct.ejs
@@ -61,9 +61,31 @@
 
                 </li>
                 <li class="menu-item ">
+                    <a class="menu-link" href="/orderList">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Orders</span>
+                    </a>
+
+                </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="/loadcoupon">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Coupon</span>
+                    </a>
+
+                </li>
+                <li class="menu-item ">
                     <a class="menu-link" href="/loadOffer">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
                     </a>
 
                 </li>
@@ -136,7 +158,7 @@
                                     <label class="form-label">Description</label>
                                     <textarea placeholder="Type here" class="form-control" rows="4" name="description"
                                         id="description"><%=Data.description%> </textarea>
-                                        <span id="descriptionError" class="error"></span>
+                                    <span id="descriptionError" class="error"></span>
                                 </div>
                                 <div class="row">
                                     <div class="col-lg-4">
