--- a/views/admin/addCoupon.ejs
+++ b/views/admin/addCoupon.ejs
@@ -66,9 +66,9 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/coupon">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
-                        <span class="text">Coupons</span>
+                        <span class="text">Coupon</span>
                     </a>
 
                 </li>
@@ -76,6 +76,14 @@
                     <a class="menu-link" href="/loadOffer">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
                     </a>
 
                 </li>
@@ -202,7 +210,7 @@
                                                 name="expire" id="expire" required>
                                             <span id="nameError" class="error"></span>
                                         </div>
-                                        
+
                                         <div>
 
                                             <button class="btn btn-md rounded font-sm hover-up">save</button>
@@ -271,7 +279,7 @@
                 document.getElementById("couponCodeError").innerHTML = 'Coupon Code cannot be empty';
                 document.getElementById("couponCodeError").style.color = "red";
                 return false;
-            } else if (couponCode.trim().length <6 ) {
+            } else if (couponCode.trim().length < 6) {
                 document.getElementById("couponCodeError").innerHTML = 'Coupon Code must be 5 characters long';
                 document.getElementById("couponCodeError").style.color = "red";
                 return false;
