--- a/views/admin/offer.ejs
+++ b/views/admin/offer.ejs
@@ -66,7 +66,7 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/loadCoupon">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Coupon</span>
                     </a>
@@ -76,6 +76,14 @@
                     <a class="menu-link" href="/loadOffer">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
                     </a>
 
                 </li>
@@ -190,7 +198,7 @@
                         </div>
                     </div> -->
                 </header>
-                
+
                 <div class="card-body">
                     <div class="table-responsive">
                         <table class="table table-hover">
@@ -235,8 +243,8 @@
                                                 <%= item.status%>
                                             </td>
 
+
                                             
->
 
 
                                             <!-- <td>
@@ -272,14 +280,14 @@
                                         <%})%>
 
 
-                                            
 
 
 
 
-                                        <%}else{%>
-                                            <h3>offer not found</h3>
-                                            <%}%>
+
+                                            <%}else{%>
+                                                <h3>offer not found</h3>
+                                                <%}%>
 
                             </tbody>
                         </table>
@@ -327,24 +335,27 @@
     <!-- Main Script -->
     <script src="assets/js/main.js?v=1.1" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet">
+
     <script>
-            function confirmDelete(offerId) {
-                Swal.fire({
-                    title: 'Are you sure?',
-                    text: 'You won\'t be able to revert this!',
-                    icon: 'warning',
-                    showCancelButton: true,
-                    confirmButtonColor: '#3085d6',
-                    cancelButtonColor: '#d33',
-                    confirmButtonText: 'Yes, remove it!'
-                }).then((result) => {
-                    if (result.isConfirmed) {
-                        // Redirect to the delete route with the product ID
-                        window.location.href = `/RemoveOffer?offerId=${offerId}`;
-                    }
-                });
-            }
-        </script>
+        function confirmDelete(offerId) {
+            Swal.fire({
+                title: 'Are you sure?',
+                text: 'You won\'t be able to revert this!',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, remove it!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Redirect to the delete route with the product ID
+                    window.location.href = `/RemoveOffer?offerId=${offerId}`;
+                }
+            });
+        }
+    </script>
 
 
 </body>
