--- a/views/admin/orderList.ejs
+++ b/views/admin/orderList.ejs
@@ -66,7 +66,7 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/loadCoupon">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Coupon</span>
                     </a>
@@ -76,6 +76,14 @@
                     <a class="menu-link" href="/loadOffer">
                         <i class="icon material-icons md-shopping_cart"></i>
                         <span class="text">Offers</span>
+                    </a>
+
+                </li>
+
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
                     </a>
 
                 </li>
@@ -226,13 +234,14 @@
                                             <%= new Date(order[i].date).toLocaleDateString()%>
                                         </td>
                                         <td class="text-end">
-                                            <a href="/orderDetails?ORid=<%= order[i]._id%>" class="btn btn-md rounded font-sm">Detail</a>
+                                            <a href="/orderDetails?ORid=<%= order[i]._id%>"
+                                                class="btn btn-md rounded font-sm">Detail</a>
                                             <div class="dropdown">
                                                 <select class="form-select"
                                                     onchange="setStatus(this.value,'<%= order[i]._id%>')">
                                                     <option value="">Option</option>
                                                     <option value="Pending">Pending</option>
-                                                    <option value="Processing">Processing</option>
+                                                    <option value="Placed">Placed</option>
                                                     <option value="Delivered">Delivered</option>
                                                     <option value="Cancelled">Cancelled</option>
                                                     <option value="Refunded">Refunded</option>
@@ -261,7 +270,7 @@
                                                         .then(response => response.json())
                                                         .then(data => {
                                                             console.log("jshdud")
-                                                          window.location.reload()
+                                                            window.location.reload()
 
                                                             Swal.fire({
                                                                 icon: data.success ? 'success' : 'info',
@@ -337,6 +346,9 @@
     <script src="assets/js/vendors/jquery.fullscreen.min.js"></script>
     <!-- Main Script -->
     <script src="assets/js/main.js?v=1.1" type="text/javascript"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+    rel="stylesheet">
+
 </body>
 
 </html>
