--- a/views/admin/productList.ejs
+++ b/views/admin/productList.ejs
@@ -66,9 +66,9 @@
 
                 </li>
                 <li class="menu-item ">
-                    <a class="menu-link" href="/loadCoupon">
+                    <a class="menu-link" href="/loadcoupon">
                         <i class="icon material-icons md-shopping_cart"></i>
-                        <span class="text">Coupons</span>
+                        <span class="text">Coupon</span>
                     </a>
 
                 </li>
@@ -80,13 +80,21 @@
 
                 </li>
 
+                <li class="menu-item ">
+                    <a class="menu-link" href="/SaleReport">
+                        <i class="icon material-icons md-shopping_cart"></i>
+                        <span class="text">Sales Report</span>
+                    </a>
+
+                </li>
+
                 <br />
                 <br />
         </nav>
     </aside>
     <main class="main-wrap">
         <header class="main-header navbar">
-            
+
         </header>
         <section class="content-main">
             <div class="content-header">
@@ -103,7 +111,7 @@
             </div>
             <div class="card mb-4">
                 <header class="card-header">
-                   
+
                 </header>
                 <!-- card-header end// -->
                 <div class="card-body">
@@ -153,81 +161,88 @@
                                                 <%= products[i].stockQuantity %>
                                             </td>
 
-                                                <% if(products[i].Offer){ %>
-                                            <td>
-                                                <del> $<%= products[i].price %></del><br>
-                                                $<%= products[i].price  - ((products[i].price  *  products[i].Offer.percentage / 100).toFixed(2)) %>
-
-                                            </td>
-                                            <%}else{%>
+                                            <% if(products[i].Offer){ %>
                                                 <td>
-                                                     $<%= products[i].price %>
-                                              
+                                                    <del> $<%= products[i].price %></del><br>
+                                                    $<%= products[i].price - ((products[i].price *
+                                                        products[i].Offer.percentage / 100).toFixed(2)) %>
+
                                                 </td>
-                                                <%}%>
-
-                                            <td>
-                                                <%= products[i].category.name %>
-                                            </td>
-                                            <% if (products[i].Offer) { %>
-                                                <td class="text-end">
-                                                    <button onclick="OfferDelete('<%= products[i]._id %>')"
-                                                        class="btn btn-primary rounded font-sm">Remove</button><br>
-                                                        <%= products[i].Offer.name%>(<%= products[i].Offer.percentage%>%)
-                                                    
-                                                </td>
-
-
                                                 <%}else{%>
-                                                    <td class="text-end">
-                                                        <button type="button" class="btn btn-primary rounded font-sm"
-                                                            onclick="showModal('<%= products[i]._id%>')">Apply
-                                                            Offer</button>
+                                                    <td>
+                                                        $<%= products[i].price %>
 
                                                     </td>
-
                                                     <%}%>
 
-
-
-
-
                                                         <td>
-                                                            <% if(products[i].is_Listed) { %>
-                                                                <span class="badge rounded-pill alert-success">
-
-                                                                    Listed
-                                                                </span>
-                                                                <% }else{ %>
-                                                                    <span class="badge rounded-pill alert-success"
-                                                                        style="background-color: lightcoral;">
-
-                                                                        unlisted
-                                                                    </span>
-                                                                    <% } %>
+                                                            <%= products[i].category.name %>
                                                         </td>
+                                                        <% if (products[i].Offer) { %>
+                                                            <td class="text-end">
+                                                                <button onclick="OfferDelete('<%= products[i]._id %>')"
+                                                                    class="btn btn-primary rounded font-sm">Remove</button><br>
+                                                                <%= products[i].Offer.name%>(<%=
+                                                                        products[i].Offer.percentage%>%)
 
-                                                        <td>
-                                                            <%= new Date(products[i].date).toLocaleDateString() %>
-                                                        </td>
+                                                            </td>
+
+
+                                                            <%}else{%>
+                                                                <td class="text-end">
+                                                                    <button type="button"
+                                                                        class="btn btn-primary rounded font-sm"
+                                                                        onclick="showModal('<%= products[i]._id%>')">Apply
+                                                                        Offer</button>
+
+                                                                </td>
+
+                                                                <%}%>
 
 
 
 
-                                                        <!-- <td class="text-end">
+
+                                                                    <td>
+                                                                        <% if(products[i].is_Listed) { %>
+                                                                            <span
+                                                                                class="badge rounded-pill alert-success">
+
+                                                                                Listed
+                                                                            </span>
+                                                                            <% }else{ %>
+                                                                                <span
+                                                                                    class="badge rounded-pill alert-success"
+                                                                                    style="background-color: lightcoral;">
+
+                                                                                    unlisted
+                                                                                </span>
+                                                                                <% } %>
+                                                                    </td>
+
+                                                                    <td>
+                                                                        <%= new
+                                                                            Date(products[i].date).toLocaleDateString()
+                                                                            %>
+                                                                    </td>
+
+
+
+
+                                                                    <!-- <td class="text-end">
                                                 <button onclick="confirmDelete('<%= products[i]._id %>')"
                                                     class="btn btn-md rounded font-sm">Delete</button>
                                             </td> -->
-                                                        <td class="text-end">
-                                                            <a href="EditProduct?id=<%= products[i]._id%>"
-                                                                class="btn btn-md rounded font-sm">Edit</a>
-                                                        </td>
-                                                        <% if (products[i].is_Listed===false) { %>
-                                                            <td class="text-end">
+                                                                    <td class="text-end">
+                                                                        <a href="EditProduct?id=<%= products[i]._id%>"
+                                                                            class="btn btn-md rounded font-sm">Edit</a>
+                                                                    </td>
+                                                                    <% if (products[i].is_Listed===false) { %>
+                                                                        <td class="text-end">
 
-                                                                <a href="ListProduct?id=<%= products[i]._id %>"
-                                                                    class="btn btn-md rounded font-sm">Listed</a>
-                                                            </td>
+                                                                            <a href="ListProduct?id=<%= products[i]._id %>"
+                                                                                class="btn btn-md rounded font-sm">Listed</a>
+                                                                        </td>
                                         </tr>
                                         <% } else { %>
                                             <td class="text-end">
@@ -266,7 +281,7 @@
                     <!-- Include Bootstrap JS -->
                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-                    
+
                 </div>
 
         </section>
@@ -294,37 +309,35 @@
     <!-- Main Script -->
     <script src="assets/js/main.js?v=1.1" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-    <div class="modal fade" id="offerModal" tabindex="-1" aria-labelledby="offerModalLabel"
-                        aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-scrollable">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="offerModalLabel">Special Offers</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                        aria-label="Close"></button>
-                                </div>
-                                <% if(offerId && offerId.length> 0) { %>
-                                    <% offerId.forEach((item)=> { %>
-                                        <div class="modal-body text-center" data-offerid="<%= item._id %>">
-                                            <%= item.name %> <br>
-                                                <%= new Date(item.startingDate).toLocaleDateString() %> <br>
-                                                    <%= new Date(item.expiryDate).toLocaleDateString() %> <br>
-                                                        <%= item.percentage %>% <br>
-                                                            <!-- <button class="btn btn-primary">Apply</button> -->
-                                        </div>
-                                        <% }) %>
-                                            <% } else { %>
-                                                <div class="modal-body">
-                                                    <h4>Offer is not found</h4>
-                                                </div>
-                                                <% } %>
-                                                    <div class="modal-footer">
-                                                        <button type="button" class="btn btn-secondary"
-                                                            data-bs-dismiss="modal">Close</button>
-                                                    </div>
-                            </div>
+    <div class="modal fade" id="offerModal" tabindex="-1" aria-labelledby="offerModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="offerModalLabel">Special Offers</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <% if(offerId && offerId.length> 0) { %>
+                    <% offerId.forEach((item)=> { %>
+                        <div class="modal-body text-center" data-offerid="<%= item._id %>">
+                            <%= item.name %> <br>
+                                <%= new Date(item.startingDate).toLocaleDateString() %> <br>
+                                    <%= new Date(item.expiryDate).toLocaleDateString() %> <br>
+                                        <%= item.percentage %>% <br>
+                                            <!-- <button class="btn btn-primary">Apply</button> -->
                         </div>
-                    </div>
+                        <% }) %>
+                            <% } else { %>
+                                <div class="modal-body">
+                                    <h4>Offer is not found</h4>
+                                </div>
+                                <% } %>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary"
+                                            data-bs-dismiss="modal">Close</button>
+                                    </div>
+            </div>
+        </div>
+    </div>
     <script>
         function OfferDelete(productId) {
             Swal.fire({
