--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -89,7 +89,7 @@
                             </ul>
                         </div>
                         <div class="hearer_icon d-flex">
-                            <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a>
+                            <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
                             <a href="/wishlistLoad"><i class="ti-heart"></i></a>
                             <div class="dropdown ">
                                 <a class="dropdown" href="/cart" id="navbarDropdown3" role="button">
@@ -107,16 +107,7 @@
                 </div>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
-            <div class="container ">
-                <form class="d-flex justify-content-between search-inner">
-                    <!-- <input type="text" class="form-control" id="search_input" placeholder="Search Here"> -->
-                    <button type="submit" class="btn"></button>
-                    <span class="ti-close" id="close_search" title="Close Search"></span>
-                </form>
-            </div>
-        </div>
-
+      
 
     </header>
     <!-- Header part end-->
