--- a/views/user/layouts/header.ejs
+++ b/views/user/layouts/header.ejs
@@ -59,7 +59,7 @@
 
                                 </li>
                                 <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
-                                <% if(locals.user) { %>
+                                <!-- <% if(locals.user) { %>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link " href="/logout" id="navbarDropdown_3" role="button">
                                             logout
@@ -75,7 +75,7 @@
 
                                         </li>
 
-                                        <% } %>
+                                        <% } %> -->
 
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link " href="/profile" id="navbarDropdown_2"
@@ -107,13 +107,5 @@
                 </div>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
-            <div class="container ">
-                <form class="d-flex justify-content-between search-inner">
-                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
-                    <button type="submit" class="btn"></button>
-                    <span class="ti-close" id="close_search" title="Close Search"></span>
-                </form>
-            </div>
-        </div>
+       
     </header>
