--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -61,7 +61,7 @@
 
                                 </li>
                                 <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
-                                <% if(locals.user) { %>
+                                <!-- <% if(locals.user) { %>
                                     <li class="nav-item dropdown">
                                         <a class="nav-link " href="/logout" id="navbarDropdown_3" role="button">
                                             logout
@@ -77,7 +77,7 @@
 
                                         </li>
 
-                                        <% } %>
+                                        <% } %> -->
 
                                             <li class="nav-item dropdown">
                                                 <a class="nav-link " href="/profile" id="navbarDropdown_2"
@@ -109,15 +109,7 @@
                 </div>
             </div>
         </div>
-        <div class="search_input" id="search_input_box">
-            <div class="container ">
-                <form class="d-flex justify-content-between search-inner">
-                    <!-- <input type="text" class="form-control" id="search_input" placeholder="Search Here"> -->
-                    <button type="submit" class="btn"></button>
-                    <span class="ti-close" id="close_search" title="Close Search"></span>
-                </form>
-            </div>
-        </div>
+       
     </header>
     <!-- Header part end-->
 
@@ -178,7 +170,7 @@
                                 /* Adjust the text color for the "no categories" message */
                             }
                         </style>
-                        <aside class="left_widgets p_filter_widgets price_rangs_aside">
+                        <!-- <aside class="left_widgets p_filter_widgets price_rangs_aside">
                             <div class="l_w_title">
                                 <h3>Price Filter</h3>
                             </div>
@@ -198,7 +190,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </aside>
+                        </aside> -->
                         <aside class="left_widgets p_filter_widgets">
                             <div class="l_w_title">
                                 <h3>ALL CATEGORIES</h3>
@@ -257,7 +249,7 @@
                     </div>
                 </div>
                 <div class="col-lg-9">
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-lg-12">
                             <div class="product_top_bar d-flex justify-content-between align-items-center">
                                 <div class="single_product_menu">
@@ -293,7 +285,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="breadcrumb_iner_item">
 
                         <!-- <p>Home <span>-</span> Shop Category</p> -->
