--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -1,4 +1,122 @@
-<%- include('../user/layouts/header') %>
+<!doctype html>
+<html lang="zxx">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>aranoz</title>
+    <link rel="icon" href="img/favicon.png">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!-- animate CSS -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- owl carousel CSS -->
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <!-- font awesome CSS -->
+    <link rel="stylesheet" href="css/all.css">
+    <!-- flaticon CSS -->
+    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/themify-icons.css">
+    <!-- font awesome CSS -->
+    <link rel="stylesheet" href="css/magnific-popup.css">
+    <!-- swiper CSS -->
+    <link rel="stylesheet" href="css/slick.css">
+    <!-- style CSS -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <!--::header part start::-->
+    <header class="main_menu home_menu">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-12">
+                    <nav class="navbar navbar-expand-lg navbar-light">
+                        <a class="navbar-brand" href="#"> <img src="img/logo.png" alt="logo"> </a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                            <span class="menu_icon"><i class="fas fa-bars"></i></span>
+                        </button>
+
+
+
+                        <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
+                            <ul class="navbar-nav">
+
+
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="/" id="navbarDropdown_1" role="button">
+                                        Home
+                                    </a>
+
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link" href="/shop" id="navbarDropdown_1" role="button">
+                                        Shop
+                                    </a>
+
+                                </li>
+                                <!-- data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" -->
+                                <!-- <% if(locals.user) { %>
+                                    <li class="nav-item dropdown">
+                                        <a class="nav-link " href="/logout" id="navbarDropdown_3" role="button">
+                                            logout
+                                        </a>
+
+                                    </li>
+
+                                    <% }else { %>
+                                        <li class="nav-item dropdown">
+                                            <a class="nav-link " href="/login" id="navbarDropdown_3" role="button">
+                                                login
+                                            </a>
+
+                                        </li>
+
+                                        <% } %> -->
+
+                                            <li class="nav-item dropdown">
+                                                <a class="nav-link " href="/profile" id="navbarDropdown_2"
+                                                    role="button">
+                                                    Profile
+                                                </a>
+
+                                            </li>
+
+
+                            </ul>
+                        </div>
+                        <div class="hearer_icon d-flex">
+                            <!-- <a id="search_1" href="javascript:void(0)"><i class="ti-search"></i></a> -->
+                            <a href="/wishlistLoad"><i class="ti-heart"></i></a>
+                            <div class="dropdown ">
+                                <a class="dropdown" href="/cart" id="navbarDropdown3" role="button">
+                                    <i class="fas fa-cart-plus"></i>
+                                </a>
+                                <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <div class="single_product">
+    
+                                    </div>
+                                </div> -->
+
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+        <!-- <div class="search_input" id="search_input_box">
+            <div class="container ">
+                <form class="d-flex justify-content-between search-inner">
+                    <input type="text" class="form-control" id="search_input" placeholder="Search Here">
+                    <button type="submit" class="btn"></button>
+                    <span class="ti-close" id="close_search" title="Close Search"></span>
+                </form>
+            </div>
+        </div> -->
+    </header>
 
     <!--================Home Banner Area =================-->
     <!-- breadcrumb start-->
@@ -28,8 +146,8 @@
                             <tr>
                                 <th scope="col">Product</th>
                                 <th scope="col">Price</th>
-                                <th scope="col">Remove</th>
                                 <th scope="col"></th>
+                                <th scope="col">Remove</th>
                             </tr>
                         </thead>
                         <tbody>
